# sdu-2-homework

./: .gitignore  CMakeLists.txt  README.MD  README_en.MD  main.cpp  resources.qrc
.github/workflows/: cmake-multi-platform.yml
chromebook_build/: CMakeCache.txt  Makefile  SDU_2_homework  cmake_install.cmake
data/: old_reminder.txt  reminder.txt
icons/: icon.rc.in
include/: SHA_256.h  console_adaption.h  dual_streambuf.h  f_add_record_window.h  filecheck_and_init.h  fileoperater.h  financenote.h  financenote_window.h  formatcheck.h  log.h  mainwindow.h  notebasic.h  p_add_record_window.h  passwordauth_window.h  passwordmanager.h  passwordmanager_window.h  r_add_record_window.h  reminder.h  reminder_window.h
src/: Mainwindows.cpp  Qtwindows.cpp  SHA_256.cpp  console_adaption.cpp  f_add_record_window.cpp  f_add_record_window.ui  filecheck_and_init.cpp  fileoperater.cpp  financenote.cpp  financenote_window.cpp  financenote_window.ui  formatcheck.cpp  log.cpp  mainwindow.cpp  mainwindow.ui  notebasic.cpp  p_add_record_window.cpp  p_add_record_window.ui  passwordauth_window.cpp  passwordauth_window.ui  passwordmanager.cpp  passwordmanager_window.cpp  passwordmanager_window.ui  r_add_record_window.cpp  r_add_record_window.ui  reminder.cpp  reminder_window.cpp  reminder_window.ui
